--- a/src/Muzich/CoreBundle/Resources/views/Element/ajax.element.edit.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/ajax.element.edit.html.twig
@@ -12,6 +12,8 @@
     'form_name'     : form_name
   } %}
 
-  <input type="button" value="{{ 'element_edit.cancel.value'|trans({}, 'userui') }}" class="cancel_edit button" />
-  <input type="submit" value="{{ 'element_edit.submit.value'|trans({}, 'userui') }}" class="button" />
+  <div class="inputs">
+    <input type="button" value="{{ 'element_edit.cancel.value'|trans({}, 'userui') }}" class="cancel_edit button" />
+    <input type="submit" value="{{ 'element_edit.submit.value'|trans({}, 'userui') }}" class="button" />
+  </div>
 </form>
