--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
@@ -6,7 +6,7 @@
   <ul class="tagbox"></ul>
   
   <input
-    class="tag_prompt"
+    class="tag_prompt niceinput"
     value=""
     placeholder="{{ 'tags.inputtext.help'|trans({}, 'userui') }}"
   />
@@ -15,14 +15,19 @@
   
   <div id="search_tag_{{ form_name }}" class="search_tag_list" style="display: none;">
     <span class="info"></span>
+    <p class="help">
+      {{ 'tags.prompt.help'|trans({}, 'userui') }}
+    </p>
     <div class="tag_loader_div">
       <img id="tag_loader_{{ form_name }}" class="tag_loader" style="display: none;"
         src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading"/>
     </div>
     <ul class="search_tag_list"></ul>
-    <a class="more button" href="#" style="display: none;">
-      {{ 'tags.search.display_more'|trans({}, 'userui') }}
-    </a>
+    <div class="textcenter">
+      <a class="more button" href="#" style="display: none;">
+        {{ 'tags.search.display_more'|trans({}, 'userui') }}
+      </a>
+    </div>
   </div>
   
 </div>
