--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -98,6 +98,79 @@
 
   </head>
   <body>
+    
+    <div id="autoplay" class="popin_block" style="display: none;">
+      
+      <a href="javascript:void(0);" id="autoplay_previous">
+        <img src="{{ asset('/bundles/muzichcore/img/autoplay_previous.png') }}" alt="previous" />
+      </a>
+      
+  <a href="javascript:void(0);" id="autoplay_close" >
+    <img src="{{ asset('/bundles/muzichcore/img/1317386146_cancel.png') }}" alt="close" />
+  </a>
+      
+      <a href="javascript:void(0);" id="autoplay_next">
+        <img src="{{ asset('/bundles/muzichcore/img/autoplay_next.png') }}" alt="next" />
+      </a>
+      
+    <img id="autoplay_element_loader" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loader" />
+    <ul id="autoplay_element"><li class="element" id="autoplay_element_container"></li></ul>
+    <div id="autoplay_player_container">
+      <div id="autoplay_player"></div>
+    </div>
+    <div id="autoplay_player_soundcloud"></div>
+    <div id="autoplay_player_generic" style="display: none;">
+      <div id="jquery_jplayer_1" class="jp-jplayer"></div>
+      <div id="jp_container_1" class="jp-audio">
+        <div class="jp-type-playlist">
+          <div class="jp-gui jp-interface">
+            <ul class="jp-controls">
+              <li><a href="javascript:;" class="jp-previous" tabindex="1">previous</a></li>
+              <li><a href="javascript:;" class="jp-play" tabindex="1">play</a></li>
+              <li><a href="javascript:;" class="jp-pause" tabindex="1">pause</a></li>
+              <li><a href="javascript:;" class="jp-next" tabindex="1">next</a></li>
+              <li><a href="javascript:;" class="jp-stop" tabindex="1">stop</a></li>
+              <li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">mute</a></li>
+              <li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">unmute</a></li>
+              <li><a href="javascript:;" class="jp-volume-max" tabindex="1" title="max volume">max volume</a></li>
+            </ul>
+            <div class="jp-progress">
+              <div class="jp-seek-bar">
+                <div class="jp-play-bar"></div>
+              </div>
+            </div>
+            <div class="jp-volume-bar">
+              <div class="jp-volume-bar-value"></div>
+            </div>
+            <div class="jp-time-holder">
+              <div class="jp-current-time"></div>
+              <div class="jp-duration"></div>
+            </div>
+            <ul class="jp-toggles" style="display: none;">
+              <li><a href="javascript:;" class="jp-shuffle" tabindex="1" title="shuffle">shuffle</a></li>
+              <li><a href="javascript:;" class="jp-shuffle-off" tabindex="1" title="shuffle off">shuffle off</a></li>
+              <li><a href="javascript:;" class="jp-repeat" tabindex="1" title="repeat">repeat</a></li>
+              <li><a href="javascript:;" class="jp-repeat-off" tabindex="1" title="repeat off">repeat off</a></li>
+            </ul>
+          </div>
+          <div class="jp-playlist">
+            <ul>
+              <li></li>
+            </ul>
+          </div>
+          <div class="jp-no-solution">
+            <span>Update Required</span>
+            To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+          </div>
+        </div>
+      </div>
+    </div>
+    <img id="autoplay_loader" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loader" />
+    <p id="autoplay_noelements_text" style="display: none;">{{ 'elements.autoplay.noelements.text'|trans({}, 'elements') }}</p>
+        
+    <p><span class="sinfo">{{ 'autoplay.limitations_players'|trans({}, 'userui') }}</span></p>
+    
+  </div>
   
     <header id="header">
       <hgroup>
@@ -147,20 +220,20 @@
           </li>
           <li class="separator"></li>
           <li>
-            <a href="" >
-              Mes diffusions
+            <a href="{{ path('show_user', {'slug': app.user.slug}) }}">
+              {{ 'container_menu.my_feeds'|trans({}, 'navigationui') }}
             </a>
           </li>
           <li class="separator"></li>
           <li>
-            <a href="" >
-              Mes groupes
+            <a href="{{ path('groups_own_list') }}" >
+              {{ 'network.mygroups'|trans({}, 'navigationui') }}
             </a>
           </li>
           <li class="separator"></li>
           <li>
-            <a href="" >
-              Mes favoris
+            <a href="{{ path('favorites_my_list') }}" >
+              {{ 'container_menu.my_favorites'|trans({}, 'navigationui') }}
             </a>
           </li>
           <li class="separator"></li>
@@ -172,7 +245,7 @@
       
       <div id="main">
         
-        <div id="mainbox" class="nicebox">
+        <div id="mainbox" class="nicebox {% block mainbox_classes %}{% endblock %}">
           {% block main_content %}{% endblock %}
           {% block fos_user_content %}{% endblock %}
         </div>
@@ -288,7 +361,21 @@
         
     </div>
     
-    
+    <div id="footer">
+      
+      <div id="footer_content">
+      
+        <div id="footer_logo">
+          <img src="{{ asset('/img/icon_minilogo_3.png') }}" alt="footer_logo">
+          <span class="fotter_muzich_big">&copy; MUZI.CH</span>
+          Tous droits réservés muzi.ch 2012 - 2013
+        </div>
+        
+        {% include "MuzichCoreBundle:Info:container.html.twig" %}
+      
+      </div>
+      
+    </div>
     
     
     
