--- a/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
@@ -1,90 +1,100 @@
 {% extends "MuzichHomeBundle::layout.html.twig" %}
 
 {% block title %}{{ group.name }}{% endblock %}
+{% block mainbox_classes %}mainbox_nopadding{% endblock %}
 
 {% block content %}
 
-  <div class="show_options">
+  <div class="top_tools">
     
-    {% if his_group %}
-      <a class="button" href="{{ path('group_edit', { 'slug': group.slug }) }}" >
-        {{ 'group.edit'|trans({}, 'groups') }}
+    
+    {% if his_group or group.open %}
+    
+      <a href="#" id="element_add_link" class="button gradient justtopright">
+        {{ 'home.add_element'|trans({}, 'navigationui') }}
+        <img src="{{ asset('/img/icon_dart_right_white.png') }}" alt="" />
       </a>
+      <a href="#" id="element_add_close_link" class="button gradient justtopright" style="display: none;">
+        {{ 'home.add_element_box.close'|trans({}, 'navigationui') }}
+        <img src="{{ asset('/img/icon_dart_left_white.png') }}" alt="" />
+      </a>
+    
     {% endif %}
+
+    <div class="show_options">
       
-    <a href="{{ path('follow', { 'type': 'group', 'id': group.id, 'token': user.personalHash }) }}" 
-       class="follow_link button {% if following %}following{% else %}notfollowing{% endif %}">
-      {% if following %}
-        {{ 'group.following'|trans({}, 'groups') }}
-      {% else %}
-        {{ 'group.follow'|trans({}, 'groups') }}
+      {% if his_group %}
+        <a class="button" href="{{ path('group_edit', { 'slug': group.slug }) }}" >
+          {{ 'group.edit'|trans({}, 'groups') }}
+        </a>
       {% endif %}
+      
+      <a href="{{ path('follow', { 'type': 'group', 'id': group.id, 'token': user.personalHash }) }}" 
+         class="follow_link button darkbutton {% if following %}following{% else %}notfollowing{% endif %}">
+        {% if following %}
+          {{ 'group.following'|trans({}, 'groups') }}
+        {% else %}
+          {{ 'group.follow'|trans({}, 'groups') }}
+        {% endif %}
+      </a>
+      
+    </div>
+      
+    <h1>{{ group.name }}</h1>
+    
+    
+    {% if his_group or group.open %}
+      <div id="element_add_box" style="display: none;">
+    
+        <input type="hidden" id="add_element_group_page" value="{{ group.slug }}" />
+        <form novalidate name="{{ add_form_name }}" action="{{ path('element_add', {'group_slug' : group.slug}) }}" method="post" {{ form_enctype(add_form) }}>
+  
+          {% include "MuzichCoreBundle:Element:form.add.html.twig" with { 'form': add_form, 'form_name': add_form_name } %}
+  
+        </form>
+        
+      </div>
+    {% endif %}
+    
+    <p class="show_info">
+      {% if count_owned != 0 %}
+      {{ 'show.user.elements.count'|trans({
+        '%count_owned%' : count_owned,
+        '%count_favorited%': count_favorited,
+        '%count_favorited_users%': count_favorited_users
+      }, 'elements') }}
+      {% else %}
+        {{ 'show.user.elements.no_count'|trans({}, 'elements') }}
+      {% endif %}
+      <br />
+      {% if count_followers > 1 %}
+        {{ 'show.user.followers.x_count'|trans({'%count%':count_followers, '%name%':group.name }, 'elements') }}
+      {% elseif count_followers == 0 %}
+        {{ 'show.user.followers.zero_count'|trans({'%name%':group.name }, 'elements') }}
+      {% else %}
+        {{ 'show.user.followers.one_count'|trans({'%count%':count_followers, '%name%':group.name }, 'elements') }}
+      {% endif %}
+    </p>
+    
+    <p class="group_description">
+      {{ group.description }}
+    </p>
+  
+    {% include "MuzichCoreBundle:Tag:tagsList.show.html.twig" with {
+      'object_id'   : group.id,
+      'object_type' : 'group'
+    } %}
+    
+    <a href="{{ path('elements_get_filter_data_autoplay_show', {
+          'show_type'  : 'group',
+          'show_id'    : group.id, 
+          'data'       : '[]'
+        }) }}" class="button" id="autoplay_launch" 
+       title="{{ 'elements.autoplay.launch'|trans({}, 'elements') }}" >
+      <img src="{{ asset('/bundles/muzichcore/img/1353494305_player_play.png') }}" alt="" />
     </a>
     
   </div>
-    
-  <h2>{{ group.name }}</h2>
-  
-  <p class="show_info">
-    {% if count_owned != 0 %}
-    {{ 'show.user.elements.count'|trans({
-      '%count_owned%' : count_owned,
-      '%count_favorited%': count_favorited,
-      '%count_favorited_users%': count_favorited_users
-    }, 'elements') }}
-    {% else %}
-      {{ 'show.user.elements.no_count'|trans({}, 'elements') }}
-    {% endif %}
-    <br />
-    {% if count_followers > 1 %}
-      {{ 'show.user.followers.x_count'|trans({'%count%':count_followers, '%name%':group.name }, 'elements') }}
-    {% elseif count_followers == 0 %}
-      {{ 'show.user.followers.zero_count'|trans({'%name%':group.name }, 'elements') }}
-    {% else %}
-      {{ 'show.user.followers.one_count'|trans({'%count%':count_followers, '%name%':group.name }, 'elements') }}
-    {% endif %}
-  </p>
-  
-  <p class="group_description">
-    {{ group.description }}
-  </p>
-
-  {% include "MuzichCoreBundle:Tag:tagsList.show.html.twig" with {
-    'object_id'   : group.id,
-    'object_type' : 'group'
-  } %}
-  
-  <a href="{{ path('elements_get_filter_data_autoplay_show', {
-        'show_type'  : 'group',
-        'show_id'    : group.id, 
-        'data'       : '[]'
-      }) }}" class="button" id="autoplay_launch" 
-     title="{{ 'elements.autoplay.launch'|trans({}, 'elements') }}" >
-    <img src="{{ asset('/bundles/muzichcore/img/1353494305_player_play.png') }}" alt="" />
-  </a>
-  
-  {% if his_group or group.open %}
-  
-    <div id="element_add_box" style="display: none;">
-  
-      <a href="#" id="element_add_close_link" class="button">
-        &lt;&lt; {{ 'group.add_element_box.close'|trans({}, 'navigationui') }}
-      </a>
-      <input type="hidden" id="add_element_group_page" value="{{ group.slug }}" />
-      <form novalidate name="{{ add_form_name }}" action="{{ path('element_add', {'group_slug' : group.slug}) }}" method="post" {{ form_enctype(add_form) }}>
-
-        {% include "MuzichCoreBundle:Element:form.add.html.twig" with { 'form': add_form, 'form_name': add_form_name } %}
-
-      </form>
-      
-    </div>
-  
-    <a href="#" id="element_add_link" class="button">
-      {{ 'group.add_element'|trans({}, 'navigationui') }} &gt;&gt;
-    </a>
-    <br />
-  
-  {% endif %}
   
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" with {'no_group_name' : true} %}
     
@@ -94,7 +104,6 @@
     
   {% if more_count is defined %} 
   {% if elements|length %}
-   <span class="elements_more">
      <input type="hidden" id="more_elements_url" value="{{ path('show_elements_get', {
         'type'          : 'group',
         'object_id'     : group.id, 
@@ -104,10 +113,11 @@
         'type'          : 'group',
         'object_id'     : group.id, 
         'tags_ids_json' : '[]'
-      }) }}" class="elements_more button" >
-       {{ 'more'|trans({}, 'userui') }}
+      }) }}" class="elements_more" >
+       <div>
+        {{ 'more'|trans({}, 'userui') }}
+      </div>
      </a>
-   </span>
   {% endif %}
   {% endif %}
   
