--- a/web/bundles/muzichcore/css/base.css
+++ b/web/bundles/muzichcore/css/base.css
@@ -61,9 +61,9 @@ a:link {
 a:visited {
   color: #339;
 }
-a:hover, a:focus, a:active {
+/*a:hover, a:focus, a:active {
   color: #00F;
-}
+}*/
 
 /* Pas de bordure autour des images dans les liens */
 a img {
